# newapi-status-bot

./: .gitignore  Cargo.toml  README.md  TODO.md  config.example.toml
.github/workflows/: build.yml
docs/: DESIGN.md  DEVELOPMENT_MEMORY.md
src/: api.rs  collector.rs  config.rs  domain.rs  lib.rs  metrics.rs  push.rs  query.rs  report.rs  repository.rs  state.rs
tools/ffi-smoke/: Cargo.toml
tools/ffi-smoke/src/: main.rs
