[package]
name = "qimen-dynamic-plugin-newapi-status"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "New API model status monitor for QimenBot"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
abi-stable-host-api = "0.1.10"
abi_stable = "0.11"
qimen-dynamic-plugin-derive = "0.1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
